fixes right align for navbar

--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -1,13 +1,13 @@
 .master {
-    background-color: #7BAE7F;
+    background-color: #41388b;
   }
   
   .card-body {
-    background-color: #bce1e7;
+    background-color: #ebecec;
   }
   
   #card-container {
-    color: #bce1e7;
+    color: #bcc5e7;
   }
   
   .card-container {
